upgrade to java 11